# afrocorpus

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
afrocorpus/: __init__.py  corpus.py
afrocorpus/data/: .gitkeep
tests/: __init__.py  test_corpus.py
