[metadata]
name = afrocorpus
version = 0.1.0
author = Ola ABOUBAKAR
author_email = ola@avokan.com
description = A Python package for managing and querying African text corpora
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avokanbj/afrocorpus
license = MIT

[options]
packages = find:
python_requires = >=3.7

[options.package_data]
afrocorpus = data/*.txt, data/.gitkeep
